syntax = "proto3";
package transaction;

import "google/protobuf/timestamp.proto";

option go_package = "jonatak/aml/proto";


message Transaction {
    string id = 1;
    string user_id = 2;
    double amount = 3;
    google.protobuf.Timestamp timestamp = 4;
}

enum TransactionStatus {
    APPROVED = 0;
    MAX_AMOUNT_REACH = 1;
    INVALID_DATE = 2;
}

message TransactionRequest {
    Transaction transaction = 1;
}

message TransactionResponse {
    TransactionStatus status = 1;
}

service Payments {
    rpc ApproveTransaction(TransactionRequest) returns (TransactionResponse) {}
}